--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ stable-wasm32-unknown-unknown:
     - rustc --version
     - rustup target add wasm32-unknown-unknown
     - apt update -y
-    - apt install -y libssl-dev pkg-config
+    - apt install -y libssl-dev pkg-config nodejs
     - cargo install wasm-bindgen-cli --target x86_64-unknown-linux-gnu
   script:
     - cargo test --verbose
