--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ wasm-bindgen = "0.2"
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
 wasm-bindgen-futures = "0.4"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ['-O4']
