--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "ghash-wasm"
-description = "Ghash for wasm"
+name = "ghash"
+description = "Ghash example App"
 version = "0.0.1"
 authors = ["glatan <glatan.edu@gmail.com>"]
 categories = ["wasm"]
@@ -9,10 +9,12 @@ license = "GPL-3.0"
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+yew = "0.15"
 wasm-bindgen = "0.2"
+ghash = { git = "https://gitlab.com/glatan/ghash", branch = "master" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
