--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "scripts": {
         "build": "rimraf dist && webpack --mode production",
         "start": "rimraf dist && webpack-dev-server --mode development --hot --host 0.0.0.0",
-        "test": "cargo test && wasm-pack test --headless"
+        "test": "cargo test && wasm-pack test --node"
     },
     "devDependencies": {
-        "@wasm-tool/wasm-pack-plugin": "^0.4.2",
-        "copy-webpack-plugin": "^5.0.3",
-        "rimraf": "^2.6.3",
+        "@wasm-tool/wasm-pack-plugin": "^1.3.1",
+        "copy-webpack-plugin": "^5.1.1",
+        "rimraf": "^3.0.2",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
