--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "devDependencies": {
         "@wasm-tool/wasm-pack-plugin": "^1.3.1",
         "copy-webpack-plugin": "^5.1.1",
+        "css-loader": "^3.5.3",
+        "node-sass": "^4.14.1",
         "rimraf": "^3.0.2",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
