--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
     "license": "GPL-3.0",
     "scripts": {
         "build": "rimraf dist && webpack --mode production",
-        "start": "webpack-dev-server --mode development --hot --host 0.0.0.0",
+        "start": "rimraf pkg && webpack-dev-server --mode development",
         "test": "cargo test && wasm-pack test --node"
     },
     "devDependencies": {
         "@wasm-tool/wasm-pack-plugin": "^1.3.1",
-        "copy-webpack-plugin": "^5.1.1",
-        "css-loader": "^3.5.3",
+        "copy-webpack-plugin": "^6.0.2",
+        "css-loader": "^3.6.0",
         "node-sass": "^4.14.1",
         "rimraf": "^3.0.2",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3"
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
     }
 }
