--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "websocket-extensions": ">=0.1.4"
     }
 }
