--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "name": "ghash-wasm",
     "version": "0.0.1",
     "license": "GPL-3.0",
+    "repository": {
+        "type": "git",
+        "url": "git+https://gitlab.com/glatan/ghash-wasm"
+    },
     "scripts": {
         "build": "rimraf dist && webpack --mode production",
         "start": "rimraf pkg && webpack serve --mode development",
