--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
         "@wasm-tool/wasm-pack-plugin": "^1.3.1",
         "copy-webpack-plugin": "^6.2.1",
         "css-loader": "^5.0.0",
-        "node-sass": "^4.14.1",
+        "node-sass": "~4",
         "rimraf": "^3.0.2",
         "sass-loader": "^10.0.4",
         "style-loader": "^2.0.0",
-        "webpack": "^5.3.0",
+        "webpack": "^5.3.2",
         "webpack-cli": "^4.1.0",
         "webpack-dev-server": "^3.11.0"
     }
