--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     },
     "devDependencies": {
         "@wasm-tool/wasm-pack-plugin": "^1.3.1",
-        "copy-webpack-plugin": "^6.2.1",
-        "css-loader": "^5.0.0",
-        "node-sass": "~4",
+        "copy-webpack-plugin": "^6.3.0",
+        "css-loader": "^5.0.1",
+        "node-sass": "^5.0.0",
         "rimraf": "^3.0.2",
-        "sass-loader": "^10.0.4",
+        "sass-loader": "^10.0.5",
         "style-loader": "^2.0.0",
-        "webpack": "^5.3.2",
-        "webpack-cli": "^4.1.0",
+        "webpack": "^5.4.0",
+        "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0"
     }
 }
