--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     },
     "devDependencies": {
         "@wasm-tool/wasm-pack-plugin": "1.6.0",
-        "copy-webpack-plugin": "9.0.1",
+        "copy-webpack-plugin": "10.1.0",
         "css-loader": "6.5.1",
         "rimraf": "3.0.2",
+        "sass": "1.45.0",
         "sass-loader": "12.3.0",
         "style-loader": "3.3.1",
         "webpack": "5.62.1",
