--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "author": "glatan <glatan.edu@gmail.com>",
     "name": "ghash-wasm",
     "version": "0.0.1",
-    "license": "GPL-3.0",
+    "license": "AGPL-3.0",
     "repository": {
         "type": "git",
         "url": "git+https://gitlab.com/glatan/ghash-wasm"
