--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,10 @@ readme = "README.md"
 license = "AGPL-3.0"
 edition = "2018"
 
-[lib]
-crate-type = ["cdylib", "rlib"]
-
 [dependencies]
-yew = "0.18.0"
-wasm-bindgen = "0.2.76"
+yew = "0.19.3"
+wasm-bindgen = "0.2.79"
+web-sys = "0.3.56"
 ghash = { git = "https://gitlab.com/glatan/ghash", branch = "master", features = ["minimal"] }
 
 [profile.release]
