--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "AGPL-3.0"
 edition = "2021"
 
 [dependencies]
-yew = "0.19.3"
+yew = { version = "0.20.0", features = ["csr"] }
 wasm-bindgen = "0.2.83"
 web-sys = "0.3.60"
 ghash = { git = "https://gitlab.com/glatan/ghash", branch = "master", features = ["minimal"] }
